feat: run @StormTest and @DataStormTest against a real database with Testcontainers (#509)
* feat: run @StormTest and @DataStormTest against a real database with Testcontainers

A database attribute on both annotations starts a Testcontainers-managed
container of the named database once per JVM and shares it across the test
classes of the run; each class, or Spring context, receives a freshly created
database inside the container, so scripts run against an empty database as
they do on H2 and classes never observe each other's tables. The image is
settable and defaults to a pinned version. Testcontainers stays out of
storm-test's dependencies: a test naming a container database needs the
database's Testcontainers module and JDBC driver on the classpath and fails
with a message naming both when one is missing.

Fixes #502

* docs: structure the container database guide and cross-link it; null-mark the new storm-test types

The testing guide splits the database section into dependencies, image
choice, container sharing and direct use; the dialects, Ktor and installation
pages point at the attribute instead of at docker-compose or a custom
DataSource; the Spring slice section lists what it sets and why.
TestDatabase keeps its container details in one nullable record and
DatabaseContainer's endpoint is nullable until started, as the null-marked
package requires.

* docs: the AI skills point dialect-specific verification at the database attribute

* docs: the skills keep verification on H2 and escalate to the database attribute