@@ -5,4 +5,7 @@ module storm.test {
     requires java.sql;
     requires java.logging;
     requires static org.jspecify;
+    // Testcontainers, behind StormTest.database(), is deliberately not required here: its jars split packages
+    // between them, which no module graph accepts, so the module reads it from the classpath instead
+    // (--add-reads storm.test=ALL-UNNAMED, see the build).
 }
